Fixed scrollbar, almost fixed one of projects, rewritten projects page

--- a/projects/alchemy/main.css
+++ b/projects/alchemy/main.css
@@ -1,3 +1,7 @@
+#alchemy {
+	display : flex;
+	flex-direction : row;
+}
 
 #map {
 	display       : block;
@@ -7,3 +11,4 @@
 	border-radius : 100%;
 	overflow      : hidden;
 }
+#inventory {}
